welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:-6: error: Missing closing brace `}' assumed here
try {
^averageValue:1: error: expected class or object definition
def averageValue(nums:Array[Int]): Int = {
^